--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Front-end application for domofon-api",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server --config webpack.config.js --content-base src",
-    "build": "./node_modules/.bin/webpack --config webpack.config.js && cp src/index.html dist/index.html",
+    "build": "./node_modules/.bin/webpack",
+    "start": "./node_modules/.bin/webpack-dev-server",
+
+
     "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "repository": {
@@ -18,7 +20,19 @@
     "url": "https://github.com/blstream/domofon-frontend/issues"
   },
   "homepage": "https://github.com/blstream/domofon-frontend#readme",
+  "dependencies": {
+    "angular2": "2.0.0-beta.15",
+    "systemjs": "0.19.26",
+    "es6-promise": "^3.1.2",
+    "es6-shim": "^0.35.0",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.2",
+    "zone.js": "0.6.10"
+  },
   "devDependencies": {
+    "typescript": "^1.8.10",
+    "ts-loader": "^0.8.2",
+    "file-loader": "^0.8.5",
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
