--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/.bin/webpack",
-    "start": "./node_modules/.bin/webpack-dev-server",
+    "start": "./node_modules/.bin/webpack-dev-server --content-base src",
 
+    "postinstall": "./node_modules/.bin/typings install",
 
     "deploy": "git subtree push --prefix dist origin gh-pages"
   },
@@ -21,25 +22,37 @@
   },
   "homepage": "https://github.com/blstream/domofon-frontend#readme",
   "dependencies": {
+    "@angular2-material/core": "^2.0.0-alpha.2",
+    "@angular2-material/button": "^2.0.0-alpha.2",
+    "@angular2-material/card": "^2.0.0-alpha.2",
+    "@angular2-material/checkbox": "^2.0.0-alpha.2",
+    "@angular2-material/input": "^2.0.0-alpha.2",
+    "@angular2-material/list": "^2.0.0-alpha.2",
+    "@angular2-material/progress-circle": "^2.0.0-alpha.2",
+    "@angular2-material/radio": "^2.0.0-alpha.2",
+    "@angular2-material/sidenav": "^2.0.0-alpha.2",
+    "@angular2-material/toolbar": "^2.0.0-alpha.2",
     "angular2": "2.0.0-beta.15",
-    "systemjs": "0.19.26",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
+    "systemjs": "0.19.26",
     "zone.js": "0.6.10"
   },
   "devDependencies": {
-    "typescript": "^1.8.10",
-    "ts-loader": "^0.8.2",
-    "file-loader": "^0.8.5",
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "file-loader": "^0.8.5",
     "jshint": "^2.9.1",
     "jshint-loader": "^0.8.3",
     "node-libs-browser": "^1.0.0",
+    "ts-loader": "^0.8.2",
+    "typescript": "^1.8.10",
+    "typescript": "^1.8.10",
+    "typings":"^0.7.12",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
