--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/.bin/webpack",
-    "start": "./node_modules/.bin/webpack-dev-server --content-base src",
-
+    "start": "./node_modules/.bin/webpack-dev-server --content-base dist",
     "postinstall": "./node_modules/.bin/typings install",
 
     "deploy": "git subtree push --prefix dist origin gh-pages"
@@ -46,9 +45,11 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.15.0",
     "jshint": "^2.9.1",
     "jshint-loader": "^0.8.3",
     "node-libs-browser": "^1.0.0",
+    "raw-loader": "0.5.1",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
     "typescript": "^1.8.10",
